trunk:

- Bug #13756 fixed. Attributes that are false should not raise NoMethodError in Base#method_missing. Fixed by [Scott Patten]

- Bug #19189 fixed. No longer reference Date::ABBR_MONTHS constant which was removed in Ruby 1.8.6. Reported by [Khurram Virani (kvirani)]

- Bug #20487 fixed. If a request fails and is retried, only escape the request path the first time. Reported by [anonymous]

- Replace ad-hoc S3Object.copy method with newly support built in API call.

- Do not make connections persistent by default. This "feature" causes far more broken pipes than it is worth. Use with caution.

0.4.0:

- Various adjustments to connection handling to try to mitigate exceptions raised from deep within Net::HTTP.

- Don't coerce numbers that start with a zero because the zero will be lost. If a bucket, for example, has a name like '0815', all operation it will fail. Closes ticket #10089 [reported anonymously]"

- Add ability to connect through a proxy using the :proxy option when establishing a connection. Suggested by [Simon Horne <simon@soulware.co.uk>]

- Add :authenticated option to url_for. When passing false, don't generate signature parameters for query string.

- Make url_for accept custom port settings. [Rich Olson] 

0.3.0:

- Ensure content type is eventually set to account for changes made to Net::HTTP in Ruby version 1.8.5. Reported by [David Hanson, Stephen Caudill, Tom Mornini <tmornini@engineyard.com>]

- Add :persistent option to connections which keeps a persistent connection rather than creating a new one per request, defaulting to true. Based on a patch by [Metalhead <metalhead@metalhead.ws>]

- If we are retrying a request after rescuing one of the retry exceptions, rewind the body if its an IO stream so it starts at the beginning. [Jamis Buck]

- Ensure that all paths being submitted to S3 are valid utf8. If they are not, we remove the extended characters. Ample help from [Jamis Buck]
